--- a/install-apache2.yml
+++ b/install-apache2.yml
@@ -5,6 +5,10 @@
   become: true
 
   tasks:
+    - name: Update repository index
+      apt:
+        update_cache: true
+
     - name: Installing apache2 package
       apt:
         name: apache2 
