--- a/install-apache2.yml
+++ b/install-apache2.yml
@@ -13,3 +13,8 @@
       apt:
         name: apache2 
         state: latest
+
+    - name: Ensure the apache server has started 
+      service:
+        name: apache2
+        state: started
