Add task to install php module for apache

--- a/install-apache2.yml
+++ b/install-apache2.yml
@@ -18,3 +18,8 @@
       service:
         name: apache2
         state: started
+
+    - name: Install php support for the apache server
+      apt:
+        name: libapache2-mod-php
+        state: latest
