--- a/site.yml
+++ b/site.yml
@@ -4,47 +4,31 @@
   hosts: all
   become: true
   pre_tasks:
-    - name: Install updates (CentOS)
+    - name: Update repo cache (CentOS)
       tags: always
       dnf:
-        update_only: true
         update_cache: true
+      changed_when: false
       when: ansible_distribution == "CentOS"
-
-    - name: Install updates (Ubuntu)
+      
+    - name: Update repo cache (Ubuntu)
       tags: always
       apt:
-        upgrade: dist
         update_cache: true
+      changed_when: false
       when: ansible_distribution == "Ubuntu"
 
 
 - hosts: all
   become: true
   tasks:
-    - name: Create user simone
-      tags: always
-      user:
-        name: simone
-        group: root
-        comment: simone is the ansible user
-
     - name: Set authorized key for simone
       tags: always
       authorized_key:
                   user: simone
                   key: "{{ lookup('file', '/home/dirudeen22/.ssh/ansible.pub') }}"
 
-    - name: Add sudoers file for simone
-      tags: always
-      copy:
-        src: sudoer_simone
-        dest: /etc/sudoers.d/simone
-        owner: root
-        group: root
-        mode: 0440
-
-- hosts: web_servers
+   - hosts: web_servers
   become: true
   tasks:
     - name: Install apache and php (Ubunut) 
