Refactor: Nofity restart_apache handler whenever the file changes
Remove the restart and enable play

--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -19,16 +19,9 @@
   lineinfile:
         path: /etc/httpd/conf/httpd.conf
         regexp: '^ServerAdmin'
-        line: ServerAdmin somebody@somedomain.com
+        line: ServerAdmin somebody@somedomain.net
   when: ansible_distribution == "CentOS"
-  register: apache
-
-- name: Restart apache service
-  tags: apache,centos,httpd
-  service:
-        name: "{{ apache_service }}"
-        state: restarted
-  when: apache.changed
+  notify: restart_apache
 
 - name: Copy the default index to site
   tags: apache,apache2,httpd
